[gd_scene load_steps=2 format=3 uid="uid://cilqtqqeaj1ts"]

[ext_resource type="Script" uid="uid://1127sqkoq07j" path="res://Menus/scripts/options_menu.gd" id="1_a4e2l"]

[node name="Options Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_a4e2l")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -155.0
offset_top = -45.0
offset_right = 156.0
offset_bottom = 106.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="BackButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 30
text = "Back"

[node name="MusicPanel" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/MusicPanel"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/MusicPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Music Volume"
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/MusicPanel/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="MusicSlider" type="HSlider" parent="MarginContainer/VBoxContainer/MusicPanel/VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="SFXPanel" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/SFXPanel"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/SFXPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "SFX Volume"
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/SFXPanel/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="SFXSlider" type="HSlider" parent="MarginContainer/VBoxContainer/SFXPanel/VBoxContainer/MarginContainer"]
layout_mode = 2

[connection signal="pressed" from="MarginContainer/VBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/MusicPanel/VBoxContainer/MarginContainer/MusicSlider" to="." method="_on_music_slider_value_changed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/SFXPanel/VBoxContainer/MarginContainer/SFXSlider" to="." method="_on_sfx_slider_value_changed"]
